Fixed center align CSS

--- a/css/index.css
+++ b/css/index.css
@@ -1,97 +1,126 @@
+html,
 body {
-	-webkit-app-region: drag;
-	width: 100%;
-	height: 100%;
-	margin: 0;
-	background: #424242;
-	color: white;
-	font-family: 'Open Sans', sans-serif;
+    /*background: rgba(0, 0, 0, 0.1);*/
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    vertical-align: middle;
+}
+
+body {
+    -webkit-app-region: drag;
+    background: #424242;
+    color: white;
+    font-family: 'Open Sans', sans-serif;
+    overflow: hidden;
+}
+
+#wrapper {
+    width: auto;
+    margin: 0;
+    padding: 0;
+    margin: 0 auto;
 }
 
 .stocks {
-	overflow: hidden;
-	text-align: center;
-	background-color: grey;
-	display: inline-block;
-	width: 400px;
-	height: 400px;
-	border-radius: 20px;
-	margin-left: 1em;
-	margin-top: 1em;
-	perspective: 400px;
-	-webkit-perspective: 400px;
+    overflow: hidden;
+    text-align: center;
+    background-color: grey;
+    display: inline-block;
+    width: 400px;
+    height: 400px;
+    margin: 15px;
+    border-radius: 20px;
+    perspective: 400px;
+    -webkit-perspective: 400px;
 }
 
 .stocks:hover {
-	background-color: #616161;
+    background-color: #616161;
 }
-.info {
-	left: calc(50% - 215px);
-	bottom: calc(50% - 287.5px);
-	width: 100%;
-	height: 50%;
-	position: relative;
-	padding: 15px;
-}
-.info > table, tr, td {
 
-	border-collapse: collapse;
+.info {
+    left: calc(50% - 215px);
+    bottom: calc(50% - 287.5px);
+    width: 100%;
+    height: 50%;
+    position: relative;
+    padding: 15px;
 }
+
+.info>table,
+tr,
 td {
-	width: 200px;
-	height: 40px;
-	text-align: middle;
-	vertical-align: middle;
+    border-collapse: collapse;
+}
+
+td {
+    width: 200px;
+    height: 40px;
+    text-align: middle;
+    vertical-align: middle;
 }
 
 .head {
-	padding: 15px;
-	text-align: left;
-	height: 170px;
-	width: 400px;
-	position: relative;
-	top: 0px;
+    padding: 15px;
+    text-align: left;
+    height: 170px;
+    width: 400px;
+    position: relative;
+    top: 0px;
 }
 
-.stocks, .front, .back {
-	width: 400px;
-	height: 400px;
+.stocks,
+.front,
+.back {
+    width: 400px;
+    height: 400px;
 }
+
 
 /* flip speed goes here */
+
 .flipper {
-	transition: 1s;
-	-webkit-transition: 1s;
-	transform-style: preserve-3d;
-	-webkit-transform-style: preserve-3d;
-	position: relative;
+    transition: 1s;
+    -webkit-transition: 1s;
+    transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
+    position: relative;
 }
 
-.front, .back {
-	backface-visibility: hidden;
-	-webkit-backface-visibility: hidden;
-	position: absolute;
-	top: 0;
-	left: 0;
+.front,
+.back {
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
+
 
 /* front pane, placed above back */
+
 .front {
-	z-index: 2;
-	/* for firefox 31 */
-	transform: rotateY(0deg);
-	-webkit-transform: rotateY(0deg);
+    z-index: 2;
+    /* for firefox 31 */
+    transform: rotateY(0deg);
+    -webkit-transform: rotateY(0deg);
 }
 
+
 /* back, initially hidden pane */
+
 .back {
-	transform: rotateY(180deg);
-	-webkit-transform: rotateY(180deg);
+    transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
 }
 
 .ct-grid {
-	stroke: black !important;
+    stroke: black !important;
 }
+
 .ct-label {
-	color: black !important;
+    color: black !important;
 }
